--- a/keyOS/res/values/strings.xml
+++ b/keyOS/res/values/strings.xml
@@ -498,6 +498,20 @@
     <string name="customize">Customize</string>
     <string name="access_denied">Access denied</string>
     <string name="access_denied_subheading">You are not allowed to access this content</string>
+    <string name="app_crash">App Crash</string>
+    <string name="app_crash_subheading">Sorry for the inconvenience we will fix this issue soon</string>
+    <string name="exit">Exit</string>
+    <string name="custom_settings">Settings</string>
+    <string name="plugins">Plugins</string>
+    <string name="wifi">Wifi</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="sound">Sound</string>
+    <string name="airplane_mode">Airplane Mode</string>
+    <string name="mobile_data">Mobile Data</string>
+    <string name="gps">GPS</string>
+    <string name="vpn">Vpn</string>
+    <string name="settings_plugin">Settings Plugin</string>
+    <string name="allow_settings_plugin_subheading">Selected plugins are available under settings option in KeyOS home screen</string>
     <!--    end keyos-->
 
 </resources>
