--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -73,7 +73,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"Папката е преименувана на „<xliff:g id="NAME">%1$s</xliff:g>“"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"Папка: „<xliff:g id="NAME">%1$s</xliff:g>“"</string>
     <string name="widget_button_text" msgid="2880537293434387943">"Приспособления"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"Настройки за началния екран"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"Разрешаване на завъртането на началния екран"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"Точки за известия"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"Включено"</string>
@@ -303,6 +302,23 @@
     <string name="exiting_keyos">Излизане</string>
     <string name="dialog_qrcode_subheading">Сканирайте този KeyOS Qr код, за да приложите същите настройки във вашето KeyOS устройство</string>
 
-
+    <string name="settings_button_text">Настройки на павилиона</string>
+    <string name="customize">Персонализирайте</string>
+    <string name="access_denied">Отказан достъп</string>
+    <string name="access_denied_subheading">Нямате достъп до това съдържание</string>
+    <string name="app_crash">Срив на приложението</string>
+    <string name="app_crash_subheading">Извинете за неудобството, скоро ще отстраним този проблем</string>
+    <string name="exit">Изход</string>
+    <string name="custom_settings">Настройки</string>
+    <string name="plugins">Приставки</string>
+    <string name="wifi">Wifi</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="sound">Звук</string>
+    <string name="airplane_mode">Самолетен режим</string>
+    <string name="mobile_data">Мобилни данни</string>
+    <string name="gps">GPS</string>
+    <string name="vpn">Vpn</string>
+    <string name="settings_plugin">Приставка за настройки</string>
+    <string name="allow_settings_plugin_subheading">Избраните приставки са налични в опцията за настройки в началния екран на KeyOS</string>
 
 </resources>
