--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -73,7 +73,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"Nouveau nom du dossier : <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"Dossier \"<xliff:g id="NAME">%1$s</xliff:g>\""</string>
     <string name="widget_button_text" msgid="2880537293434387943">"Widgets"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"Paramètres accueil"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"Autoriser la rotation de l\'écran d\'accueil"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"Pastilles de notification"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"Activé"</string>
@@ -303,6 +302,26 @@
     <string name="loading_settings">Chargement des paramètres</string>
     <string name="exiting_keyos">Quitter</string>
     <string name="dialog_qrcode_subheading">Scannez ce code KeyOS Qr pour appliquer les mêmes paramètres à votre appareil KeyOS</string>
+
+
+    <string name="settings_button_text">Paramètres du kiosque</string>
+    <string name="customize">Personnaliser</string>
+    <string name="access_denied">Accès refusé</string>
+    <string name="access_denied_subheading">Vous n\'êtes pas autorisé à accéder à ce contenu</string>
+    <string name="app_crash">Crash de l\'application</string>
+    <string name="app_crash_subheading">Désolé pour le désagrément, nous allons bientôt résoudre ce problème</string>
+    <string name="exit">Sortie</string>
+    <string name="custom_settings">Paramètres</string>
+    <string name="plugins">Plugins</string>
+    <string name="wifi">Wifi</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="sound">Du son</string>
+    <string name="airplane_mode">Mode avion</string>
+    <string name="mobile_data">Données mobiles</string>
+    <string name="gps">GPS</string>
+    <string name="vpn">VPN</string>
+    <string name="settings_plugin">Plugin de paramètres</string>
+    <string name="allow_settings_plugin_subheading">Les plugins sélectionnés sont disponibles sous l\'option Paramètres de l\'écran d\'accueil KeyOS</string>
 
 
 </resources>
