--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -73,7 +73,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"A mappa új neve: <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"Mappa: <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="widget_button_text" msgid="2880537293434387943">"Modulok"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"Kezdőoldal beállításai"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"A kezdőképernyő elforgatásának engedélyezése"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"Értesítési pöttyök"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"Bekapcsolva"</string>
@@ -304,5 +303,24 @@
     <string name="exiting_keyos">Kilépés</string>
     <string name="dialog_qrcode_subheading">Vizsgálja meg ezt a KeyOS Qr kódot, hogy ugyanazokat a beállításokat alkalmazza a KeyOS eszközön</string>
 
+
+    <string name="settings_button_text">Postavke kioska</string>
+    <string name="customize">Prilagodi</string>
+    <string name="access_denied">Pristup odbijen</string>
+    <string name="access_denied_subheading">Nemate pristup ovom sadržaju</string>
+    <string name="app_crash">Pad aplikacije</string>
+    <string name="app_crash_subheading">Žao nam je zbog neugodnosti, uskoro ćemo riješiti ovaj problem</string>
+    <string name="exit">Izlaz</string>
+    <string name="custom_settings">Postavke</string>
+    <string name="plugins">Dodaci</string>
+    <string name="wifi">Wifi</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="sound">Zvuk</string>
+    <string name="airplane_mode">Zrakoplovni način</string>
+    <string name="mobile_data">Mobilni podaci</string>
+    <string name="gps">GPS</string>
+    <string name="vpn">Vpn</string>
+    <string name="settings_plugin">Dodatak za postavke</string>
+    <string name="allow_settings_plugin_subheading">Odabrani dodaci dostupni su u opciji postavki na početnom zaslonu KeyOS-a</string>
 
 </resources>
