--- a/res/values-hy-rAM/strings.xml
+++ b/res/values-hy-rAM/strings.xml
@@ -73,7 +73,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"Պանակը վերանվանվեց <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"Պանակ՝ <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="widget_button_text" msgid="2880537293434387943">"Վիջեթներ"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"Գլխավոր էջի կարգավորումներ"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"Թույլ տալ հիմնական էկրանի պտտումը"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"Ծանուցումների կետիկներ"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"Միացված է"</string>
@@ -128,4 +127,25 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Ծանուցումներն ու հավելվածներն անջատված են"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Փակել"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Փակվեց"</string>
+
+
+    <string name="settings_button_text">Կրպակի կարգավորումներ</string>
+    <string name="customize">Անհատականացնել</string>
+    <string name="access_denied">Մուտքն արգելված է</string>
+    <string name="access_denied_subheading">Ձեզ չի թույլատրվում մուտք գործել այս բովանդակություն</string>
+    <string name="app_crash">Appրագրի խափանում</string>
+    <string name="app_crash_subheading">Կներեք անհանգստության համար, մենք շուտով կլուծենք այս խնդիրը</string>
+    <string name="exit">Ելք</string>
+    <string name="custom_settings">Կարգավորումներ</string>
+    <string name="plugins">Պլագիններ</string>
+    <string name="wifi">Wi-Fi</string>
+    <string name="bluetooth">Bluetooth- ը</string>
+    <string name="sound">Հնչյուն</string>
+    <string name="airplane_mode">Ինքնաթիռի ռեժիմ</string>
+    <string name="mobile_data">Բջջային տվյալներ</string>
+    <string name="gps">GPS</string>
+    <string name="vpn">Vpn</string>
+    <string name="settings_plugin">Կարգավորումների ներդիր</string>
+    <string name="allow_settings_plugin_subheading">Ընտրված պլագինները հասանելի են KeyOS- ի հիմնական էկրանին ՝ պարամետրերի ընտրանքով</string>
+
 </resources>
