--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -73,7 +73,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"ಫೋಲ್ಡರ್‌ ಅನ್ನು <xliff:g id="NAME">%1$s</xliff:g> ಗೆ ಮರುಹೆಸರಿಸಲಾಗಿದೆ"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"ಫೋಲ್ಡರ್: <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="widget_button_text" msgid="2880537293434387943">"ವಿಜೆಟ್‌ಗಳು"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"ಮುಖಪುಟ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"ಮುಖಪುಟ ತಿರುಗುವಿಕೆಯನ್ನು ಅನುಮತಿಸಿ"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"ಅಧಿಸೂಚನೆ ಡಾಟ್‌ಗಳು"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"ಆನ್"</string>
@@ -307,5 +306,23 @@
     <string name="dialog_qrcode_subheading">ನಿಮ್ಮ ಕೀಯೋಸ್ ಸಾಧನದಲ್ಲಿ ಒಂದೇ ರೀತಿಯ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಅನ್ವಯಿಸಲು ಈ ಕೀಯೋಸ್ ಕ್ಯೂಆರ್ ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಿ</string>
 
 
+    <string name="settings_button_text">ಕಿಯೋಸ್ಕ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳು</string>
+    <string name="customize">ಕಸ್ಟಮೈಸ್ ಮಾಡಿ</string>
+    <string name="access_denied">ಪ್ರವೇಶವನ್ನು ನಿರಾಕರಿಸಲಾಗಿದೆ</string>
+    <string name="access_denied_subheading">ಈ ವಿಷಯವನ್ನು ಪ್ರವೇಶಿಸಲು ನಿಮಗೆ ಅನುಮತಿ ಇಲ್ಲ</string>
+    <string name="app_crash">ಅಪ್ಲಿಕೇಶನ್ ಕ್ರ್ಯಾಶ್</string>
+    <string name="app_crash_subheading">ಅನಾನುಕೂಲತೆಗಾಗಿ ಕ್ಷಮಿಸಿ ನಾವು ಶೀಘ್ರದಲ್ಲೇ ಈ ಸಮಸ್ಯೆಯನ್ನು ಪರಿಹರಿಸುತ್ತೇವೆ</string>
+    <string name="exit">ನಿರ್ಗಮಿಸಿ</string>
+    <string name="custom_settings">ಸಂಯೋಜನೆಗಳು</string>
+    <string name="plugins">ಪ್ಲಗಿನ್‌ಗಳು</string>
+    <string name="wifi">ವೈಫೈ</string>
+    <string name="bluetooth">ಬ್ಲೂಟೂತ್</string>
+    <string name="sound">ಧ್ವನಿ</string>
+    <string name="airplane_mode">ಏರ್‌ಪ್ಲೇನ್ ಮೋಡ್</string>
+    <string name="mobile_data">ಮೊಬೈಲ್ ಡೇಟಾ</string>
+    <string name="gps">ಜಿಪಿಎಸ್</string>
+    <string name="vpn">ವಿಪಿಎನ್</string>
+    <string name="settings_plugin">ಸೆಟ್ಟಿಂಗ್‌ಗಳ ಪ್ಲಗಿನ್</string>
+    <string name="allow_settings_plugin_subheading">ಕೀಓಎಸ್ ಮುಖಪುಟದಲ್ಲಿ ಸೆಟ್ಟಿಂಗ್‌ಗಳ ಆಯ್ಕೆಯ ಅಡಿಯಲ್ಲಿ ಆಯ್ದ ಪ್ಲಗಿನ್‌ಗಳು ಲಭ್ಯವಿದೆ</string>
 
 </resources>
