--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -73,7 +73,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"폴더 이름 변경: <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"폴더: <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="widget_button_text" msgid="2880537293434387943">"위젯"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"홈 설정"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"홈 화면 회전 허용"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"알림 표시 점"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"사용"</string>
@@ -303,5 +302,25 @@
     <string name="loading_settings">설정로드 중</string>
     <string name="exiting_keyos">종료</string>
     <string name="dialog_qrcode_subheading">이 KeyOS Qr 코드를 스캔하여 KeyOS 장치에 동일한 설정을 적용하십시오.</string>
+
+
+    <string name="settings_button_text">키오스크 설정</string>
+    <string name="customize">커스터마이즈</string>
+    <string name="access_denied">접근 불가</string>
+    <string name="access_denied_subheading">이 콘텐츠에 액세스 할 수 없습니다.</string>
+    <string name="app_crash">앱 충돌</string>
+    <string name="app_crash_subheading">불편을 끼쳐 드려 죄송합니다. 곧이 문제를 해결하겠습니다.</string>
+    <string name="exit">출구</string>
+    <string name="custom_settings">설정</string>
+    <string name="plugins">플러그인</string>
+    <string name="wifi">와이파이</string>
+    <string name="bluetooth">블루투스</string>
+    <string name="sound">소리</string>
+    <string name="airplane_mode">비행기 모드</string>
+    <string name="mobile_data">모바일 데이터</string>
+    <string name="gps">GPS</string>
+    <string name="vpn">VPN</string>
+    <string name="settings_plugin">설정 플러그인</string>
+    <string name="allow_settings_plugin_subheading">선택한 플러그인은 KeyOS 홈 화면의 설정 옵션에서 사용할 수 있습니다.</string>
 
 </resources>
