--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -75,7 +75,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"Nazwa folderu zmieniona na <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"Folder: <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="widget_button_text" msgid="2880537293434387943">"Widżety"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"Ustawienia strony głównej"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"Zezwalaj na obrót ekranu głównego"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"Plakietki z powiadomieniami"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"Włączono"</string>
@@ -306,6 +305,27 @@
     <string name="loading_settings">Ładowanie ustawień</string>
     <string name="exiting_keyos">Wychodzę</string>
     <string name="dialog_qrcode_subheading">Zeskanuj ten kod KeyOS Qr, aby zastosować te same ustawienia w urządzeniu KeyOS</string>
+
+
+    <string name="settings_button_text">Ustawienia kiosku</string>
+    <string name="customize">Dostosuj</string>
+    <string name="access_denied">Brak dostępu</string>
+    <string name="access_denied_subheading">Nie masz dostępu do tej zawartości</string>
+    <string name="app_crash">Awaria aplikacji</string>
+    <string name="app_crash_subheading">Przepraszamy za niedogodności, wkrótce naprawimy ten problem</string>
+    <string name="exit">Wyjście</string>
+    <string name="custom_settings">Ustawienia</string>
+    <string name="plugins">Wtyczki</string>
+    <string name="wifi">Wi-Fi</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="sound">Dźwięk</string>
+    <string name="airplane_mode">Tryb samolotowy</string>
+    <string name="mobile_data">Dane mobilne</string>
+    <string name="gps">GPS</string>
+    <string name="vpn">Vpn</string>
+    <string name="settings_plugin">Wtyczka ustawień</string>
+    <string name="allow_settings_plugin_subheading">Wybrane wtyczki są dostępne w opcji ustawień na ekranie głównym KeyOS</string>
+
 
 
 </resources>
