--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -73,7 +73,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"已将文件夹重命名为“<xliff:g id="NAME">%1$s</xliff:g>”"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"文件夹：<xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="widget_button_text" msgid="2880537293434387943">"微件"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"主屏幕设置"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"允许旋转主屏幕"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"通知圆点"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"开启"</string>
@@ -317,6 +316,24 @@
     <string name="dialog_qrcode_subheading">扫描此KeyOS Qr代码以在KeyOS设备中应用相同的设置</string>
 
 
+    <string name="settings_button_text">信息亭设置</string>
+    <string name="customize">定制</string>
+    <string name="access_denied">拒绝访问</string>
+    <string name="access_denied_subheading">您无权访问此内容</string>
+    <string name="app_crash">应用崩溃</string>
+    <string name="app_crash_subheading">很抱歉给您带来不便，我们将尽快解决此问题</string>
+    <string name="exit">出口</string>
+    <string name="custom_settings">设定值</string>
+    <string name="plugins">外挂程式</string>
+    <string name="wifi">无线上网</string>
+    <string name="bluetooth">蓝牙</string>
+    <string name="sound">声音</string>
+    <string name="airplane_mode">飞行模式</string>
+    <string name="mobile_data">移动数据</string>
+    <string name="gps">全球定位系统</string>
+    <string name="vpn">虚拟专用网</string>
+    <string name="settings_plugin">设置插件</string>
+    <string name="allow_settings_plugin_subheading">选定的插件在KeyOS主屏幕的“设置”选项下可用</string>
 
 
 </resources>
