--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -73,7 +73,6 @@
     <string name="folder_renamed" msgid="1794088362165669656">"已將資料夾重新命名為「<xliff:g id="NAME">%1$s</xliff:g>」"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"資料夾：<xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="widget_button_text" msgid="2880537293434387943">"小工具"</string>
-    <string name="settings_button_text" msgid="8873672322605444408">"Home 設定"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"允許旋轉主螢幕"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"通知圓點"</string>
     <string name="icon_badging_desc_on" msgid="2627952638544674079">"已啟用"</string>
@@ -139,4 +138,23 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"已關閉通知和應用程式"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"關閉"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"已關閉"</string>
+
+    <string name="settings_button_text">信息亭設置</string>
+    <string name="customize">定制</string>
+    <string name="access_denied">拒絕訪問</string>
+    <string name="access_denied_subheading">您無權訪問此內容</string>
+    <string name="app_crash">應用崩潰</string>
+    <string name="app_crash_subheading">很抱歉給您帶來不便，我們將盡快解決此問題</string>
+    <string name="exit">出口</string>
+    <string name="custom_settings">設定值</string>
+    <string name="plugins">外掛程式</string>
+    <string name="wifi">無線上網</string>
+    <string name="bluetooth">藍牙</string>
+    <string name="sound">聲音</string>
+    <string name="airplane_mode">飛行模式</string>
+    <string name="mobile_data">移動數據</string>
+    <string name="gps">全球定位系統</string>
+    <string name="vpn">虛擬專用網</string>
+    <string name="settings_plugin">設置插件</string>
+    <string name="allow_settings_plugin_subheading">選定的插件在KeyOS主屏幕的“設置”選項下可用</string>
 </resources>
